[tool.poetry]
name = "ensembletools"
version = "0.1.0"
description = ""
authors = ["Mojtaba Amini <mojtaba.amini@greenpocket.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
mdtraj = "^1.9.9"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
plotly = "^5.19.0"
pandas = "^2.2.0"
streamlit = "^1.31.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
